@@ -18,6 +18,7 @@ Features:
 * #1094 - Core extensions removal: Drop `String#at`, `from`, `last` and `is_utf8?` since they are no longer used by Mail internals. (metcalf)
 * #1095 - Core extensions removal: Drop `String#mb_chars`, `not_ascii_only?`, `constantize`, `first`, `to` to avoid monkey patching the standard library. (metcalf)
 * #1111  - Mail::Field.parse API which deprecates calling Mail::Field.new with unparsed header fields. (jeremy)
+* #1117 - Configurable POP3 read_timeout. (hspazio)
 
 Performance:
 * #1059 - Switch from mime-types to mini_mime for a much smaller memory footprint. (SamSaffron)
